clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_double_quoted_arithmetic_expression.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1687
expression: "test_tokenizer(r#\"x\"$((1+2))\"y\"#)?"
---
TokenizerResult(
  input: "x\"$((1+2))\"y",
  result: [
    Word("x\"$((1+2))\"y", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
    )),
  ],
)
