clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_double_quoted_command_substitution.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1681
expression: "test_tokenizer(r#\"x\"$(echo hi)\"y\"#)?"
---
TokenizerResult(
  input: "x\"$(echo hi)\"y",
  result: [
    Word("x\"$(echo hi)\"y", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 14,
        line: 1,
        column: 15,
      ),
    )),
  ],
)
