clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_escaped_whitespace.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1663
expression: "test_tokenizer(r\"1\\ 2 3\")?"
---
TokenizerResult(
  input: "1\\ 2 3",
  result: [
    Word("1\\ 2", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("3", SourceSpan(
      start: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
  ],
)
