clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_here_doc-4.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1423
expression: "test_tokenizer(r\"cat <<HERE\nSOMETHING\nHERE\")?"
---
TokenizerResult(
  input: "cat <<HERE\nSOMETHING\nHERE",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        index: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        index: 10,
        line: 1,
        column: 11,
      ),
    )),
    Word("SOMETHING\n", SourceSpan(
      start: SourcePosition(
        index: 11,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        index: 25,
        line: 3,
        column: 5,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        index: 25,
        line: 3,
        column: 5,
      ),
      end: SourcePosition(
        index: 25,
        line: 3,
        column: 5,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        index: 10,
        line: 1,
        column: 11,
      ),
      end: SourcePosition(
        index: 11,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
